    + If a HELO is not specified then attempt to use the content of
      /etc/mailname instread.
  * checkbashisms: Recognise brace expansions containing a leading or
    trailing empty value ("{,foo}", etc). Thanks Jonny Lamb.
    (Closes: #499971)
  * debdiff: Ensure exit status is always explicitly set (and set
    correctly). (Closes: #500256)

  [ James Vega ]
  * pts-subscribe: When called as pts-unsubscribe, send an unsubscribe request
    to the PTS.  (Closes: #500585)

 -- Adam D. Barratt <adam@adam-barratt.org.uk>  Tue, 23 Sep 2008 19:07:48 +0100

devscripts (2.10.38) unstable; urgency=low

  [ Adam D. Barratt ]
  * When upgrading from devscripts 2.10.36, remove the incorrectly 
    created /etc/devscripts.con if it is present and add the affected 
    section to /etc/devscripts.conf instead.
  * tagpending: Re-add an accidentally removed blank line at the end
    of the generated comments.

  [ Patrick Schoenfeld ]
  * mk-build-deps:
    + Implement --install switch which installs a generated package and its
      depends afterwards.
    + Add an option --tool to specify which tool to use when installing the
      packages (default: apt-get)
    + Add an option --remove to specify that package files should be deleted
      after installing it.
    + Enable configuration file parsing
    + Add a configuration option MKBUILDDEPS_TOOL to specify which tool shall
      be used if the installation of the build-depends after creation is
      requested.
    + Add a configuration option MKBUILDDEPS_REMOVE_AFTER_INSTALL to configure
      that package files shall always be removed after installing the
      created packages and its build-depends.

  [ Mohammed Adnène Trojette ]
  * Comment out functions available only on Ubuntu. (Closes: #499884)

 -- Adam D. Barratt <adam@adam-barratt.org.uk>  Tue, 23 Sep 2008 18:58:12 +0100

devscripts (2.10.37) unstable; urgency=low

  * Fix typo in postinst. (Closes: #499639)
