@@ -63,6 +63,11 @@ binary-arch: build-arch install
 	    dh_link /usr/share/man/fr/man1/debchange.1.gz \
 	    /usr/share/man/fr/man1/dch.1.gz; \
 	fi
+	if [ -f debian/devscripts/usr/share/man/fr/man1/pts-subscribe.1 ]; \
+	then \
+	    dh_link /usr/share/man/fr/man1/pts-subscribe.1.gz \
+	    /usr/share/man/fr/man1/pts-unsubscribe.1.gz; \
+	fi
 	dh_installchangelogs
 	dh_strip
 	dh_compress
